crates/normalize/tests/snapshots/cli_snapshots__help_sessions_analyze.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"sessions\", \"analyze\"])"
---
Run deep behavioral analysis on a session (tool stats, errors, token costs, corrections)

Usage: normalize sessions analyze [OPTIONS] [session]

Arguments:
  [session]  Session ID or pattern

Options:
      --exact                      Require exact/prefix match (disable fuzzy)
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --format <format>            Force specific format: claude, codex, gemini, normalize
      --jsonl                      Output one JSON object per line (for arrays)
      --project <project>          Filter by specific project path
      --json                       Output machine-readable JSON
  -r, --root <root>                Root directory (defaults to current directory)
      --jq <jq>                    Filter output through jq expression
      --mode <mode>                Session mode: interactive (default), subagent, or all
      --agent-type <agent-type>    Filter by agent type (e.g. Explore, general-purpose, Plan)
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Examples:
normalize sessions analyze abc123             # analyze a session by ID
normalize sessions analyze abc123 --pretty    # colored terminal output
normalize sessions analyze abc123 --json      # machine-readable analysis
normalize sessions analyze agent-abc --mode subagent  # analyze a subagent
