crates/normalize/tests/snapshots/cli_snapshots__help_sessions_list.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"sessions\", \"list\"])"
---
List available sessions

Usage: normalize sessions list [OPTIONS]

Options:
      --grep <grep>                Filter sessions by grep pattern
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --days <days>                Filter sessions from the last N days
      --jsonl                      Output one JSON object per line (for arrays)
      --since <since>              Filter sessions since date (YYYY-MM-DD)
      --json                       Output machine-readable JSON
      --until <until>              Filter sessions until date (YYYY-MM-DD)
      --jq <jq>                    Filter output through jq expression
      --project <project>          Filter by specific project path
      --all-projects               Show sessions from all projects
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --format <format>            Force specific format: claude, codex, gemini, normalize
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
  -n, --limit <limit>              Maximum number of sessions
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -r, --root <root>                Root directory (defaults to current directory)
      --mode <mode>                Session mode: interactive (default), subagent, or all
      --agent-type <agent-type>    Filter by agent type (e.g. Explore, general-purpose, Plan)
      --sort <sort>                Sort keys (comma-separated, prefix with - for desc or + for asc): date, duration, name. E.g. duration, +name, -date
      --reviewed                   Only show sessions marked as reviewed
      --unreviewed                 Only show sessions not yet reviewed
  -h, --help                       Print help

Examples:
normalize sessions list                       # list recent sessions for current project
normalize sessions list --days 7              # sessions from the last 7 days
normalize sessions list --grep "refactor"     # filter sessions by content pattern
normalize sessions list --all-projects        # show sessions across all projects
normalize sessions list --format codex        # only show Codex sessions
normalize sessions list --mode subagent       # list subagent sessions only
normalize sessions list --mode all            # list interactive + subagent sessions
normalize sessions list --agent-type Explore  # only Explore agents
normalize sessions list --sort duration       # longest sessions first
normalize sessions list --sort +name          # alphabetical by session name
normalize sessions list --reviewed            # only sessions marked as reviewed
normalize sessions list --unreviewed          # only sessions not yet reviewed
