crates/normalize/tests/snapshots/cli_snapshots__help_sessions_messages.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"sessions\", \"messages\"])"
---
Extract all messages across sessions into a flat, queryable form

Usage: normalize sessions messages [OPTIONS]

Options:
      --pretty                         Human-friendly output with colors and formatting
      --role <role>                    Filter by role: user (default), assistant, tool, system, all
      --compact                        Compact output without colors (overrides TTY detection)
      --grep <grep>                    Filter messages by content pattern
      --days <days>                    Filter sessions from the last N days
      --jsonl                          Output one JSON object per line (for arrays)
      --json                           Output machine-readable JSON
      --since <since>                  Filter sessions since date (YYYY-MM-DD)
      --jq <jq>                        Filter output through jq expression
      --until <until>                  Filter sessions until date (YYYY-MM-DD)
      --input-schema                   Print JSON Schema of the subcommand's input parameters and exit
      --project <project>              Filter by specific project path
      --all-projects                   Show sessions from all projects
      --output-schema                  Print JSON Schema of the subcommand's return type and exit
      --params-json <params-json>      Provide all parameters as a JSON object instead of individual flags
      --session <session>              Filter to a specific session ID
      --format <format>                Force specific format: claude, codex, gemini, normalize
  -n, --limit <limit>                  Maximum number of sessions
      --show-usage                     Show per-turn token usage (input/output/cache)
      --sort <sort>                    Sort keys (comma-separated, prefix with - for desc or + for asc): tokens, timestamp, session. E.g. -tokens, +session,-tokens, timestamp
  -C, --context <context>              Lines of context around each matching line (requires --grep)
  -r, --root <root>                    Root directory (defaults to current directory)
      --mode <mode>                    Session mode: interactive (default), subagent, or all
      --agent-type <agent-type>        Filter by agent type (e.g. Explore, general-purpose, Plan)
      --sequence <sequence>            Filter by consecutive tool call sequence (comma-separated tool names, e.g. Grep,Grep,Read)
      --context-turns <context-turns>  Number of context turns to include around each sequence match (requires --sequence, default 1)
      --has-tool <has-tool>            Only turns that used the named tool (case-insensitive prefix match)
      --errors-only                    Only turns with tool errors
      --exclude-interrupted            Skip turns containing [Request interrupted by user]
      --turn-range <turn-range>        Positional turn range within each session, e.g. 5-10
      --min-chars <min-chars>          Minimum message length in characters
      --max-chars <max-chars>          Maximum message length in characters
  -h, --help                           Print help

Examples:
normalize sessions messages                                # user messages from recent sessions
normalize sessions messages --role all                     # all roles (user + assistant)
normalize sessions messages --grep "error" --no-truncate   # search messages, full text
normalize sessions messages --grep "panic" --context 2     # matching lines with 2 lines of context
normalize sessions messages --show-usage --sort -tokens    # heaviest turns first
normalize sessions messages --sort timestamp               # chronological across sessions
normalize sessions messages --sort +session,-tokens        # by session asc, then tokens desc
normalize sessions messages --sequence Grep,Grep,Read      # turns where Grep,Grep,Read ran consecutively
normalize sessions messages --has-tool Bash                # turns that used Bash
normalize sessions messages --errors-only                  # turns with tool errors
normalize sessions messages --exclude-interrupted          # skip interrupted turns
normalize sessions messages --turn-range 5-10             # turns 5 through 10 only
normalize sessions messages --min-chars 100               # messages with at least 100 chars
