crates/normalize/tests/snapshots/cli_snapshots__help_sessions_plans.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"sessions\", \"plans\"])"
---
List and view agent plans

Usage: normalize sessions plans [OPTIONS] [name]

Arguments:
  [name]  Plan name to view (omit to list all)

Options:
  -n, --limit <limit>              Maximum number of plans
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --jsonl                      Output one JSON object per line (for arrays)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Examples:
normalize sessions plans                     # list all saved plans
normalize sessions plans my-plan             # view a specific plan by name
