crates/normalize/tests/snapshots/cli_snapshots__help_sessions_show.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"sessions\", \"show\"])"
---
Show a specific session (summary or full conversation)

Usage: normalize sessions show [OPTIONS] [session]

Arguments:
  [session]  Session ID or path

Options:
      --full                       Show full conversation log
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --exact                      Require exact/prefix match (disable fuzzy)
      --format <format>            Force specific format: claude, codex, gemini, normalize
      --jsonl                      Output one JSON object per line (for arrays)
      --json                       Output machine-readable JSON
      --project <project>          Filter by specific project path
      --jq <jq>                    Filter output through jq expression
  -r, --root <root>                Root directory (defaults to current directory)
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Examples:
normalize sessions show abc123               # show session summary (fuzzy match on ID)
normalize sessions show abc123 --full        # show full conversation log
normalize sessions show abc123 --exact       # require exact ID match
