crates/normalize/tests/snapshots/cli_snapshots__help_sessions_stats.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"sessions\", \"stats\"])"
---
Show aggregate statistics across sessions

Usage: normalize sessions stats [OPTIONS]

Options:
      --grep <grep>                Filter sessions by grep pattern
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --days <days>                Filter sessions from the last N days
      --jsonl                      Output one JSON object per line (for arrays)
      --since <since>              Filter sessions since date (YYYY-MM-DD)
      --json                       Output machine-readable JSON
      --until <until>              Filter sessions until date (YYYY-MM-DD)
      --jq <jq>                    Filter output through jq expression
      --project <project>          Filter by specific project path
      --all-projects               Show sessions from all projects
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --format <format>            Force specific format: claude, codex, gemini, normalize
      --output-schema              Print JSON Schema of the subcommand's return type and exit
  -n, --limit <limit>              Maximum number of sessions (0 = all, default: all)
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
      --group-by <group-by>        Group results by comma-separated fields: project, day (e.g. project,day)
  -r, --root <root>                Root directory (defaults to current directory)
      --mode <mode>                Session mode: interactive (default), subagent, or all
      --agent-type <agent-type>    Filter by agent type (e.g. Explore, general-purpose, Plan)
      --sort <sort>                Sort tool rows (comma-separated, prefix with - for desc or + for asc): calls, errors, name. E.g. name, -errors
      --by-repo                    Group sessions by repository and compare metrics across repos
  -h, --help                       Print help

Examples:
normalize sessions stats                             # aggregate stats for recent sessions
normalize sessions stats --days 30                   # stats for the last 30 days
normalize sessions stats --group-by project          # group results by project
normalize sessions stats --group-by project,day      # group by project and day
normalize sessions stats --by-repo                   # cross-repo comparison (all projects)
normalize sessions stats --mode subagent             # stats for subagent sessions only
normalize sessions stats --sort name                 # sort tool rows alphabetically
normalize sessions stats --sort errors               # sort tool rows by error count
