crates/normalize/tests/snapshots/cli_snapshots__help_sessions_subagents.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"sessions\", \"subagents\"])"
---
List subagents for a given parent session

Usage: normalize sessions subagents [OPTIONS] [session]

Arguments:
  [session]  Parent session ID

Options:
      --format <format>            Force specific format: claude, codex, gemini, normalize
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --project <project>          Filter by specific project path
      --jsonl                      Output one JSON object per line (for arrays)
  -r, --root <root>                Root directory (defaults to current directory)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Examples:
normalize sessions subagents abc123            # list subagents of session abc123
normalize sessions subagents abc123 --json     # machine-readable output
