crates/normalize/tests/snapshots/cli_snapshots__help_similarity_duplicates.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"similarity\", \"duplicates\"])"
---
Detect duplicate or similar code blocks and functions across the codebase.

Usage: normalize similarity duplicates [OPTIONS]

Options:
      --pretty                     Human-friendly output with colors and formatting
      --scope <scope>              Scope: functions (default) or blocks [possible values: functions, blocks]
      --compact                    Compact output without colors (overrides TTY detection)
      --mode <mode>                Detection mode: exact (default), similar (fuzzy), or clusters [possible values: exact, similar, clusters]
      --elide-identifiers          Elide identifier names when comparing
      --jsonl                      Output one JSON object per line (for arrays)
      --elide-literals             Elide literal values when comparing (default: true for blocks scope)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --no-elide-literals          Keep literal values distinct when comparing (blocks scope: opt out of default elision)
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --show-source                Show source code for matches
      --min-lines <min-lines>      Minimum lines to be considered
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --include-trait-impls        Include groups where all items share the same name
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -r, --root <root>                Root directory (defaults to current directory)
      --exclude <exclude>          Exclude paths matching pattern
      --only <only>                Include only paths matching pattern
      --similarity <similarity>    Minimum similarity threshold (0.0-1.0, similar/clusters mode)
      --skeleton                   Match on control-flow structure (similar/clusters mode)
      --repos-dir <repos-dir>      Scan across all git repos under DIR (functions scope only)
      --repos-depth <repos-depth>  Max depth to search for repos (default: 1)
      --skip-functions             Skip function/method nodes (blocks scope only)
  -l, --limit <limit>              Maximum number of results to show (0=no limit, clusters mode)
  -h, --help                       Print help

Also known as: copy-paste detection, code clones, dead code candidates, duplicated
logic, DRY violations. Finds code that has been copied and can be consolidated.

Modes: `exact` (default) finds byte-identical bodies; `similar` uses MinHash fuzzy
matching; `clusters` groups near-duplicates into connected components. Returns a
`DuplicatesReport` with grouped matches and similarity scores.

Groups where all items share the same name (likely trait implementations), parallel
implementations across sibling directories, and same-body-pattern clusters are
suppressed by default. Use `--include-trait-impls` to include them in output.

Examples:
normalize similarity                       # exact duplicate functions
normalize similarity --mode similar        # fuzzy near-duplicates
normalize similarity --mode clusters       # connected-component clusters
