crates/normalize/tests/snapshots/cli_snapshots__help_structure.snap
---
source: crates/normalize/tests/cli_snapshots.rs
assertion_line: 47
expression: "snapshot_help(&[\"structure\"])"
---
Build and query the code index. Run `structure rebuild` after cloning or when cross-file commands return stale results.

Usage: normalize structure [OPTIONS] [COMMAND]

Commands:
  rebuild        Rebuild the structural index (symbols, calls, imports, and file tree)
  stats          Show index statistics (DB size vs codebase size)
  files          List indexed files (with optional prefix filter)
  packages       Index external packages (stdlib, site-packages) into global cache
  query          Run an arbitrary SQL query against the structural index
  search         Search the semantic index for chunks matching a natural-language query
  test-fixtures  Test language extraction fixtures — verify symbols, imports, and calls are extracted
                 correctly from source files.
  help           Print this message or the help of the given subcommand(s)

Options:
      --jsonl                      Output one JSON object per line (for arrays)
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help
  -V, --version                    Print version
